# dataquay

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yaml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_persist_workflow.py  0002_add_magic_link_auth.py
backend/app/: api_errors.py  auth.py  database.py  main.py  models.py  schemas.py
backend/app/agents/: __init__.py  data_steward.py
backend/app/routes/: audit.py  clarifications.py  datasets.py  inspect.py  package.py  remediate.py  validation.py  workspaces.py
backend/app/services/: __init__.py  audit_trail.py  clarifications.py  csv_profiler.py  dataset_inspector.py  dataset_workflow.py  dataset_workspace.py  inspection_findings.py  package_generator.py  privacy_detector.py  readiness.py  remediation_apply.py  remediation_preview.py  remediation_validation.py  workflow_repository.py
backend/tests/: conftest.py  test_api_errors.py  test_audit_trail.py  test_authentication.py  test_clarifications.py  test_csv_profiler.py  test_data_steward_agent.py  test_dataset_inspector.py  test_dataset_upload.py  test_inspect_api.py  test_migrations.py  test_package_api.py  test_package_generator.py  test_postgresql_workflow.py  test_readiness.py  test_remediate_api.py  test_remediation_apply.py  test_remediation_preview.py  test_remediation_validation.py  test_uploaded_dataset_workflow.py  test_validate_api.py  test_workspace_persistence.py
docs/: backlog.md  prd.md  technical-spec.md  ux-spec.md
frontend/: .env.example  README.md  auth.ts  (+3 more)
(+33 files in other folders)
