[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17",
    "fastapi>=0.139.2",
    "polars>=1.42.1",
    "psycopg[binary]>=3.2",
    "pydantic-ai>=2.12.0",
    "python-dotenv>=1.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
